--- a/bettingGame.html
+++ b/bettingGame.html
@@ -1,9 +1,75 @@
-<html>
-<head>
-  <script type="text/javascript" src="bettingGame.js"></script>
-</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>JS Betting Game</title>
 
-<body>
-</body>
+    <!-- Bootstrap -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+  <div class="container-fluid">
+    <div class="col-md-9">
+
+      <h1>Betting Game</h1>
+      <hr>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title" id="panel-title">Balance<a class="anchorjs-link" href="#panel-title"><span class="anchorjs-icon"></span></a></h3>
+            </div>
+            <div id="balance-body" class="panel-body">
+            </div>
+          </div>
+        </div>
+         <div class="col-md-3 col-md-offset-3">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title" id="panel-title">Number<a class="anchorjs-link" href="#panel-title"><span class="anchorjs-icon"></span></a></h3>
+            </div>
+            <div id="number" class="panel-body">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <form class="form">
+        <div class="form-group">
+          <div class="input-group">
+            <span class="input-group-addon">Bet $</span>
+              <input id="bet" type="text" class="form-control" placeholder="">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="input-group">
+            <input id="guess" type="text" class="form-control" placeholder="">
+            <span class="input-group-btn">
+              <button id="play" class="btn btn-default" type="button">Guess</button>
+            </span>
+          </div>
+        </div>
+      </form>
+    <div id="alert-pane">
+    </div>
+    </div>
+  </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="bettingGame.js"></script>
+  </body>
 
 </html>
