restart button doesn't quite work yet.

--- a/bettingGame.html
+++ b/bettingGame.html
@@ -38,7 +38,7 @@
             <div class="panel-heading">
               <h3 class="panel-title" id="panel-title">Number<a class="anchorjs-link" href="#panel-title"><span class="anchorjs-icon"></span></a></h3>
             </div>
-            <div id="number" class="panel-body">
+            <div id="number" class="panel-body">?
             </div>
           </div>
         </div>
@@ -60,6 +60,9 @@
           </div>
         </div>
       </form>
+    <div>
+      <input style="visibility:hidden;" id="restart" class="btn btn-danger" type="button" value="Restart">
+    </div>
     <div id="alert-pane">
     </div>
     </div>
